# werdna_ros2

./: .gitignore  README.md  pid.yaml  policy.onnx  policy_1.pt  policy_no_lin_vel.onnx  policy_velocity.pt  werdna.pt
install/: local_setup.sh  setup.sh
install/werdna_pid/lib/werdna_pid/: werdna_pid_node
install/werdna_pid/share/werdna_pid/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pi3hat_hardware_interface/: CMakeLists.txt  package.xml  pi3hat_hardware_interface.xml
pi3hat_hardware_interface/hardware/: pi3hat_system.cpp
pi3hat_hardware_interface/hardware/include/: pi3hat_system.hpp  visibility_control.h
pi3hat_hardware_interface/hardware/include/motues/: moteus.h  moteus_multiplex.h  moteus_protocol.h  moteus_transport.h  pi3hat.cc  pi3hat.h  pi3hat_moteus_transport.h  pi3hat_tool.cc  realtime.h
waypoint_follower/: package.xml  setup.py
waypoint_follower/waypoint_follower/: waypoint_follower.py
werdna_agent/: package.xml  setup.cfg  setup.py
werdna_agent/werdna_agent/: werdna_agent_node.py
werdna_bringup/: CMakeLists.txt  package.xml
werdna_bringup/config/: nav2_params.yaml  ros2_controllers.yaml  slam.yaml
werdna_bringup/launch/: launch_robot.py  localization.py  mapping_slam.launch.py
werdna_bringup/map/: map.pgm  map.yaml
werdna_description/: CMakeLists.txt  package.xml
werdna_description/launch/: ros2_control.launch.py
werdna_description/ros2_control/: ros2_control.xacro
werdna_description/urdf/: consts.xacro  werdna.xacro  werdna_core.xacro
werdna_msgs/: CMakeLists.txt  package.xml
werdna_msgs/msg/: JoyCtrlCmds.msg
werdna_odometry_broadcaster/: CMakeLists.txt  package.xml  werdna_odometry_broadcaster.xml
werdna_odometry_broadcaster/include/werdna_odometry_broadcaster/: odometry.hpp  visibility_control.h  werdna_odometry_broadcaster.hpp
werdna_odometry_broadcaster/src/: odometry.cpp  werdna_odometry_broadcaster.cpp  werdna_odometry_broadcaster_parameters.yaml
werdna_odometry_broadcaster/test/: launch.py
werdna_odometry_broadcaster/test/config/: test_werdna_odometry_broadcaster.yaml
werdna_pid/: setup.cfg  setup.py
werdna_pid/werdna_pid/: werdna_pid_node.py
werdna_teleop/: CMakeLists.txt  package.xml
werdna_teleop/launch/: werdna_teleop.launch.py
werdna_teleop/src/: werdna_teleop_joy.cpp
